# anchorprune

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
anchorprune/: __init__.py  cli.py  errors.py  middleware.py  scenario.py
anchorprune/adapters/: __init__.py
anchorprune/anchors/: __init__.py  extractor.py  governor.py  models.py  registry.py  weighting.py
anchorprune/api/: __init__.py  app.py  dependencies.py  errors.py  schemas.py
anchorprune/benchmark/: __init__.py  harness.py  pack.py  report.py
anchorprune/blocks/: __init__.py  models.py  parser.py  store.py
anchorprune/config/: __init__.py  factory.py  loader.py  models.py  resolve.py  validation.py
anchorprune/conflicts/: __init__.py  detector.py  models.py
anchorprune/core/: __init__.py  audit.py  context_composer.py  runtime.py  state_graph.py
anchorprune/domains/: __init__.py  models.py  (+1 more)
benchmarks/: benchmark_report.md  long_run_results.csv  results.json
configs/: anthropic.example.yaml  mock.yaml  openai.example.yaml  service.mock.yaml
dashboard/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
docs/: api_stability.md  architecture.md  claims.md  dashboard.md  examples.md  index.md  integrations.md  method.md  policy_packs.md  real_model_eval.md  release_checklist.md  security.md  service.md  v1_readiness.md
scripts/: demo_v1.sh
tests/: conftest.py  test_api_health.py  test_api_pagination.py  test_api_runs.py  test_api_steps.py  test_benchmark_pack.py  test_cli.py  test_cli_v09.py  test_composer.py  test_compressor_preserves_anchor_links.py  test_config_loads_mock_pipeline.py  test_config_validation.py  test_conflicts.py  test_core_import_without_fastapi.py  test_docs_consistency.py  test_embedding_adapter_contract.py  test_errors.py  test_governor.py  test_import_boundaries.py  test_integration_layer.py  test_llm_adapter_contract.py  test_logging.py  test_migrations.py  test_model_conflict_cannot_override_hard_gate.py  test_model_extractor_outputs_candidates_not_anchors.py  test_model_output_still_passes_governor.py  test_optional_dependencies_do_not_break_core_import.py  test_packaging.py  test_policy_packs.py  test_pruner.py  test_real_eval_does_not_mutate_benchmarks.py  test_real_eval_models.py  test_real_eval_outputs.py  test_real_eval_report.py  test_real_eval_runner_mock.py  test_runtime.py  test_scenario_and_benchmark.py  test_service_does_not_break_benchmark_pack.py  test_sqlite_storage.py  test_state_roundtrip.py  (+2 more)
(+131 files in other folders)
