[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorprune"
version = "0.1.0"
description = "Governed Anchored State Pruning for Long-Running AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ida" }]
keywords = ["llm", "agents", "context-engineering", "governance", "state-pruning"]
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
anchorprune = "anchorprune.cli:app"

[tool.setuptools.packages.find]
include = ["anchorprune*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
