[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anchorprune"
version = "1.0.0"
description = "Governed Anchored State Pruning for Long-Running AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ida" }]
keywords = ["llm", "agents", "context-engineering", "governance", "state-pruning"]
dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Real-provider adapters are optional. A core install never requires network
# SDKs; importing an adapter module is always safe and only constructing the
# client needs the dependency.
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
local = []
# Local-first FastAPI service layer (v0.4). A core install never requires these.
api = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx>=0.27",
]
# Packaging verification (v0.9): `python -m build` + `twine check dist/*`.
build = [
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
anchorprune = "anchorprune.cli:app"

[tool.setuptools.packages.find]
include = ["anchorprune*"]

[tool.setuptools.package-data]
# Ship the built-in domain policy packs (v0.7) inside the wheel.
"anchorprune.policy_packs" = ["builtins/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
